Add dispenses table

--- a/data/index.html
+++ b/data/index.html
@@ -20,6 +20,10 @@
         <h6>Latest Data Points</h6>
         <div id="data_table"></div>
       </div>
+      <div class="card table-card">
+        <h6>Latest Dispense Data</h6>
+        <div id="dispense_table"></div>
+      </div>
       <div class="card linechart-card">
         <h6>Historic pH</h6>
         <div id="line_chart"></div>
