Add download all pH data button

--- a/data/index.html
+++ b/data/index.html
@@ -13,9 +13,14 @@
   </div>
     <div class="cards">
       <div class="cards-row">
-        <div class="card gauge-card">
-          <h6>Live pH</h6>
-          <div id="chart_div" class="gauge"></div>
+        <div class="card-stack">
+          <div class="card gauge-card">
+            <h6>Live pH</h6>
+            <div id="chart_div" class="gauge"></div>
+          </div>
+          <div class="card download-card">
+            <button id="download-btn" class="download-button">Download pH Data</button>
+          </div>
         </div>
         <div class="card table-card">
           <h6>Latest Data Points</h6>
